    - define REST resources and methods in XML files (see rest-api-1.6.xsd)
    - map methods under resources to service calls and entity operations
    - see example Service REST API in example.rest.xml
    - call REST methods through the /rest/s1 transition
    - see example client calls in the rest.xml screen definition file
    - get Swagger API definition from /rest/service.swagger
  - Added json-schema for Entity REST API: for all entities get
    /rest/entity.json, for a single entity get /rest/entity.json/${name}.json
  - Added RAML API definition for Entity REST API at /rest/entity.raml
  - Entity REST API supports master definitions through
    /rest/m1/${entity}/${master} or /rest/v1/${entity}?master=${master};
    see comments in the rest.xml screen definition XML file for examples
  - SystemMessage entity has additional fields to identify messages
  - Changed receive#SystemMessage to an interface, now use
    receive#IncomingSystemMessage for remote calls, will call the
    SystemMessageType.receiveServiceName service if specified to save message
  - Added EDI handler (parser and generator), used in Mantle for X12 messages
- Email Features
  - Various improvements to email message polling (calling EM-ECA rules)
    including support for Java System Properties pass through and fix for
    password pass through for IMAPS/etc
  - Email ECA structure significantly improved, for details see the
    org.moqui.EmailServices.process#EmailEca service interface
  - Improved sending EmailTemplate with support for reply to and bounce
    addresses from EmailTemplate and CC/BCC addresses from both EmailTemplate
    and service parameters
- Security Features
  - Better protection against CSRF/XSRF attaches with a session token as per
    https://www.owasp.org/index.php/CSRF_Prevention_Cheat_Sheet;
    - when enabled (webapp.@require-session-token in Moqui Conf XML file not
      false) a moquiSessionToken parameter must be passed